--- a/Simple-Clipper/Simple-Clipping/Simple-Clipping.vcxproj
+++ b/Simple-Clipper/Simple-Clipping/Simple-Clipping.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{9AF89DFA-88CE-43F4-BB7F-B97B9726FAF9}</ProjectGuid>
     <RootNamespace>SimpleClipping</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <ProjectName>Simple-Clipper</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -126,7 +127,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="SimpleClipping.hpp" />
+    <ClInclude Include="SimpleClipper.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
