--- a/Simple-Clipper/Simple-Clipper/Simple-Clipper.vcxproj
+++ b/Simple-Clipper/Simple-Clipper/Simple-Clipper.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SimpleClipper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SimpleClipper.hpp" />
