--- a/Simple-Clipper/Simple-Clipper/Simple-Clipper.vcxproj.filters
+++ b/Simple-Clipper/Simple-Clipper/Simple-Clipper.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SimpleClipper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SimpleClipper.hpp">
