added display tool

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,11 @@ add_library(SimpleClipper
 )
 
 target_include_directories(SimpleClipper PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_dependencies(SimpleClipper wykobi)
 target_include_directories(SimpleClipper PUBLIC ${wykobi_INCLUDE_DIR})
 
 add_executable(SimpleClipperMain
     ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
 )
 target_link_libraries(SimpleClipperMain SimpleClipper)
+
